# agentic-doc-intelligence

./: .dockerignore  .gitignore  Dockerfile  README.md  REPO_OVERVIEW.md  commands.txt  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
.github/instructions/: agenticdoc.instructions.md
app/agents/: analysis_agent.py  extraction_agent.py  retrieval_agent.py  verifier_agent.py
app/embeddings/: __init__.py  embedding.py
app/ingestion/: chunking.py  ingestion.py
app/reranking/: __init__.py  cross_encoder_reranker.py
app/storage/: schemas.py  sql_store.py  vector_store.py
app/workflows/: document_ingestion_graph.py  qa_graph.py
scripts/: benchmark_reranker.py
