[project]
name = "agentic-doc-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.133.1",
    "langchain-core>=1.2.16",
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.9",
    "mcp>=1.26.0",
    "openai>=2.24.0",
    "pinecone",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pymupdf>=1.24.0",
    "pymupdf4llm",
    "pymupdf-layout",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "sqlalchemy>=2.0.47",
    "torch>=2.2.0",
    "transformers>=4.41.0",
    "uvicorn>=0.41.0",
    "langchain-text-splitters>=1.1.1",
    "langchain-elasticsearch>=1.0.0",
    "langchain-pinecone>=0.2.13",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langchain-experimental>=0.4.1",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "asyncpg>=0.31.0",
    "langchain>=1.2.10",
]
